--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,4 +2,5 @@
 
 <button routerLink="/login">LOGIN</button>
 <button routerLink="/quem-somos">QUEM SOMOS</button>
-<button routerLink="/planos">PLANOS</button>
+<button routerLink="/lista-eventos">LISTA EVENTOS</button>
+<button routerLink="/evento-detalhes">DETALHES EVENTO</button>
