--- a/src/app/pages/quem-somos/quem-somos.component.html
+++ b/src/app/pages/quem-somos/quem-somos.component.html
@@ -41,180 +41,192 @@
           <div class="col-6 col-img">
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="slice-2">
-      <div class="grid">
-        <div class="col-6 font-bold">
-          <div class="titulo">
-            <label>Startups</label>
-          </div>
-
-          <div class="subtitulo">
-            <label class="text-base font-normal">
-              O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
-              inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
-              indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
-              com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
-            </label>
-          </div>
-
-          <div class="btn">
-            <button> FAÇA PARTE! </button>
-          </div>
-          <div class="col-6 col-img">
-          </div>
+        <div class="col-6 col-img">
+          <img src="../../../assets/imgs/map-outline.svg" alt="" srcset="">
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="slice-3">
-      <div class="grid">
-        <div class="col-6 font-bold">
-          <div class="titulo">
-            <label>Mantenedores</label>
-          </div>
+  <div class="slice-2">
+    <div class="grid">
+      <div class="col-6 font-bold col-texto-startup">
+        <div class="titulo">
+          <label>Startups</label>
+        </div>
 
-          <div class="subtitulo">
-            <label class="text-base font-normal">
-              O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
-              inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
-              indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
-              com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
-            </label>
-          </div>
+        <div class="subtitulo">
+          <label class="text-base font-normal">
+            O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
+            inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
+            indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
+            com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
+          </label>
+        </div>
 
-          <div class="btn">
-            <button> CONSULTE-NOS! </button>
-          </div>
-          <div class="col-6 col-img">
-          </div>
+        <div class="btn">
+          <button> FAÇA PARTE! </button>
         </div>
       </div>
+
+      <div class="col-6 col-img">
+        <img src="../../../assets/imgs/image-startups.svg" alt="" srcset="">
+      </div>
     </div>
+  </div>
 
-    <div class="slice-4">
-      <div class="grid">
-        <div class="col-7 slice-4-col-1">
-          <div class="titulo">
-            <label class="font-bold">Serviços</label>
+  <div class="slice-3">
+    <div class="grid">
+      <div class="col-6 font-bold div-texto-mantenedores">
+        <div class="titulo">
+          <label>Mantenedores</label>
+        </div>
+
+        <div class="subtitulo">
+          <label class="text-base font-normal">
+            O primeiro HUB de inovação aberta da indústria no Brasil. Nossa missão é conectar o ecossistema de
+            inovação à indústria, criando as melhores soluções para o setor e a sociedade. Queremos transformar as
+            indústrias e acelerar startups, para estimular o empreendedorismo inovador, aproximando pessoas e negócios
+            com o objetivo de impactar positivamente a economia de Mato Grosso do Sul.
+          </label>
+        </div>
+
+        <div class="btn">
+          <button> CONSULTE-NOS! </button>
+        </div>
+        <div class="col-6 col-img">
+        </div>
+      </div>
+      <div class="col-6 col-img">
+        <img src="../../../assets/imgs/image-mantenedores.svg" alt="" srcset="">
+      </div>
+    </div>
+  </div>
+
+  <div class="slice-4">
+    <div class="grid">
+      <div class="col-7 slice-4-col-1">
+        <div class="titulo">
+          <label class="font-bold">Serviços</label>
+        </div>
+
+        <div class="subtitulo">
+          <label>
+            O Workshop LK Cursos 2023 será realizado nos dias 1 e 2 de julho de 2023 em Vitória de Santo Antão,
+            Pernambuco. O evento é voltado para profissionais técnicos em reparo de aparelhos celulares e tablets.
+            <br>
+            <br>
+            Serão 14 especialistas em reparos de aparelhos iPhone, aparelhos Android e também especialistas em reparo
+            de telas e troca de vidros que estarão presentes como palestrantes.
+          </label>
+        </div>
+
+        <div class="div-join">
+          <div class="div-img">
+            <img src="../../../assets/imgs/image-junte-se.svg" alt="" srcset="">
           </div>
 
-          <div class="subtitulo">
-            <label>
-              O Workshop LK Cursos 2023 será realizado nos dias 1 e 2 de julho de 2023 em Vitória de Santo Antão,
-              Pernambuco. O evento é voltado para profissionais técnicos em reparo de aparelhos celulares e tablets.
-              <br>
-              <br>
-              Serão 14 especialistas em reparos de aparelhos iPhone, aparelhos Android e também especialistas em reparo
-              de telas e troca de vidros que estarão presentes como palestrantes.
-            </label>
-          </div>
+          <div class="div-texto">
+            <label class="font-bold">Junte-se ao nosso time!</label>
 
-          <div class="div-join">
-            <img src="../../../assets/imgs/startup-image.jpg" alt="">
+            <div class="subtitulo">
+              <label>
+                Nossas equipes são formadas por desenvolvedores, analistas de negócios, designers, líderes de
+                tecnologia
+                e gestores de projeto.
+              </label>
+            </div>
 
-            <div class="join-text">
-              <label class="font-bold">Junte-se ao nosso time!</label>
-
-              <div class="subtitulo">
-                <label>
-                  Nossas equipes são formadas por desenvolvedores, analistas de negócios, designers, líderes de
-                  tecnologia
-                  e gestores de projeto.
-                </label>
-              </div>
-
-              <div class="btn">
-                <button>Candidate-se!</button>
-              </div>
-              <div class="col-6 col-img">
-              </div>
+            <div class="btn">
+              <button>Candidate-se!</button>
+            </div>
+            <div class="col-6 col-img">
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="col-5 slice-4-col-2">
-          <div class="div-startup">
-            <div class="titulo">
-              <h2> Startup na mídia</h2>
+      <div class="col-5 slice-4-col-2">
+        <div class="div-startup">
+          <div class="titulo">
+            <h2> Startup na mídia</h2>
 
-              <div class="see-more">
-                <label><a href="">+ leia mais</a></label>
-              </div>
+            <div class="see-more">
+              <label><a href="">+ leia mais</a></label>
             </div>
-            <div class="cards-media">
-              <div class="card-item" *ngFor="let media of listMedias">
-                <div class="flex">
-                  <div class="card-image">
-                    <img src="../../../assets/icons/image-gallery.png" alt="teste">
-                  </div>
-                  <div class="card-text">
-                    <h4><b>{{media.title}}</b></h4>
-                    <label>{{media.text}}</label>
-                  </div>
-                  <br>
+          </div>
+          <div class="cards-media">
+            <div class="card-item" *ngFor="let media of listMedias">
+              <div class="flex">
+                <div class="card-image">
+                  <img src="../../../assets/imgs/image-blog-{{media.id}}.jpg" alt="teste">
                 </div>
-                <p-divider></p-divider>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="slice-5 footer">
-
-        <div class="grid">
-          <div class="col-3 col-img-sesi">
-            <img src="../../../assets/imgs/startup-white.png" alt="">
-
-            <div class="social-media">
-              <img src="../../../assets/icons/linkedin.png" alt="linkedin">
-              <img src="../../../assets/icons/instagram.png" alt="instagram">
-              <img src="../../../assets/icons/whatsapp.png" alt="whatsapp">
-            </div>
-          </div>
-
-          <div class="col-5 col-links">
-            <ul>
-              <li><a href="">Missão</a></li>
-              <li><a href="">Quem somos</a></li>
-              <li><a href="">A indústria</a></li>
-              <li><a href="">Trabalhe conosco</a></li>
-            </ul>
-
-            <ul>
-              <li><a href="">Eventos</a></li>
-              <li><a href="">Blog</a></li>
-              <li><a href="">Contato</a></li>
-              <li><a href="">Termos da LGPD</a></li>
-            </ul>
-          </div>
-
-          <div class="col-4 col-subscribe">
-            <div>
-              <label>Inscreva-se na nossa newsletter</label>
-
-              <div class="div-input">
-                <div class="input-container">
-                  <input class="input-field" type="text" placeholder="Insira aqui seu e-mail">
-                  <i class="pi pi-comment" style="font-size: 2rem"></i>
+                <div class="card-text">
+                  <h4><b>{{media.title}}</b></h4>
+                  <label>{{media.text}}</label>
                 </div>
+                <br>
               </div>
+              <p-divider></p-divider>
             </div>
-          </div>
-        </div>
-
-        <!-- <hr> -->
-
-        <div class="last-thing">
-          <label>© Startup Sesi MS. All rights reserved</label>
-
-          <div class="voltar-ao-topo">
-            <label>Voltar ao topo </label>
-            <i class="pi pi-arrow-up"></i>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="slice-5 footer">
+
+      <div class="grid">
+        <div class="col-3 col-img-sesi">
+          <img src="../../../assets/imgs/startup-white.png" alt="">
+
+          <div class="social-media">
+            <img src="../../../assets/icons/linkedin.png" alt="linkedin">
+            <img src="../../../assets/icons/instagram.png" alt="instagram">
+            <img src="../../../assets/icons/whatsapp.png" alt="whatsapp">
+          </div>
+        </div>
+
+        <div class="col-5 col-links">
+          <ul>
+            <li><a href="">Missão</a></li>
+            <li><a href="">Quem somos</a></li>
+            <li><a href="">A indústria</a></li>
+            <li><a href="">Trabalhe conosco</a></li>
+          </ul>
+
+          <ul>
+            <li><a href="">Eventos</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contato</a></li>
+            <li><a href="">Termos da LGPD</a></li>
+          </ul>
+        </div>
+
+        <div class="col-4 col-subscribe">
+          <div>
+            <label>Inscreva-se na nossa newsletter</label>
+
+            <div class="div-input">
+              <div class="input-container">
+                <input class="input-field" type="text" placeholder="Insira aqui seu e-mail">
+                <i class="pi pi-comment" style="font-size: 2rem"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- <hr> -->
+
+      <div class="last-thing">
+        <label>© Startup Sesi MS. All rights reserved</label>
+
+        <div class="voltar-ao-topo">
+          <label>Voltar ao topo </label>
+          <i class="pi pi-arrow-up"></i>
+        </div>
+      </div>
+    </div>
+  </div>
