commit alterações giovanni

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,3 +4,4 @@
 <button routerLink="/quem-somos">QUEM SOMOS</button>
 <button routerLink="/lista-eventos">LISTA EVENTOS</button>
 <button routerLink="/evento-detalhes">DETALHES EVENTO</button>
+<button routerLink="/nova-conta">NOVA CONTA</button>
