--- a/src/app/pages/quem-somos/quem-somos.component.html
+++ b/src/app/pages/quem-somos/quem-somos.component.html
@@ -7,11 +7,11 @@
 
       <div class="div-opcoes-header div-links-header">
         <ul>
-          <li><a href="">HUB</a></li>
+          <li><a href="/quem-somos">HUB</a></li>
           <li><a href="">STARTUPS</a></li>
           <li><a href="">MANTENEDORES</a></li>
           <li><a href="">SERVIÇOS</a></li>
-          <li><a href="">EVENTOS</a></li>
+          <li><a href="/lista-eventos">EVENTOS</a></li>
           <li><a href="">BLOG</a></li>
         </ul>
       </div>
