--- a/src/app/pages/lista-eventos/lista-eventos.component.html
+++ b/src/app/pages/lista-eventos/lista-eventos.component.html
@@ -95,7 +95,7 @@
           <div class="div-lista-agenda">
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -127,7 +127,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -159,7 +159,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-encerrado">
                   <div>
@@ -191,7 +191,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-encerrado">
                   <div>
@@ -223,7 +223,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-encerrado">
                   <div>
@@ -266,7 +266,7 @@
           <div class="div-lista-agenda">
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -287,7 +287,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -308,7 +308,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -329,7 +329,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -350,7 +350,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -378,7 +378,7 @@
           <div class="div-lista-agenda">
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -399,7 +399,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -420,7 +420,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -441,7 +441,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -462,7 +462,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -490,7 +490,7 @@
           <div class="div-lista-agenda">
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -511,7 +511,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -532,7 +532,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -553,7 +553,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -574,7 +574,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -602,7 +602,7 @@
           <div class="div-lista-agenda">
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -623,7 +623,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -644,7 +644,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -665,7 +665,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
@@ -686,7 +686,7 @@
 
             <div class="div-item-agenda">
               <div class="div-imagem-agenda">
-                <img src="../../../assets/imgs/startup-image.jpg" alt="" srcset="">
+                <img src="../../../assets/imgs/image-organizador.svg" alt="" srcset="">
 
                 <div class="div-status-inscricao status-aberto">
                   <div>
