--- a/src/app/pages/lista-eventos/lista-eventos.component.scss
+++ b/src/app/pages/lista-eventos/lista-eventos.component.scss
@@ -295,6 +295,7 @@ input::-webkit-inner-spin-button {
           }
 
           .div-saiba-mais label {
+            cursor: pointer;
             margin-top: 10px;
             text-align: center;
             color: #34c1e2;
