--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,5 @@
-<p>login works!</p>
-
-<button routerLink="/login">LOGIN</button>
-<button routerLink="/quem-somos">QUEM SOMOS</button>
-<button routerLink="/lista-eventos">LISTA EVENTOS</button>
-<button routerLink="/evento-detalhes">DETALHES EVENTO</button>
+<div class="lista-paginas">
+  <button routerLink="/quem-somos">QUEM SOMOS</button>
+  <button routerLink="/lista-eventos">LISTA EVENTOS</button>
+  <button routerLink="/evento-detalhes">DETALHES EVENTO</button>
+</div>
